<resources>
    <string name="setting_harga">Setting Harga</string>
    <string name="tambah_setting_harga">Tambah Setting Harga</string>
    <string name="update_setting_harga">Update Setting Harga</string>

    <string name="jenis_sampah">Jenis Sampah</string>
    <string name="hint_jenis_sampah">Masukan Jenis Sampah</string>

    <string name="harga_sampah">Harga Sampah</string>
    <string name="hint_harga_sampah">Masukan Harga Sampah</string>

    <string name="logam">Logam</string>
    <string name="harga_perkg">Rp. 3.000</string>

    <string name="simpan">Simpan</string>
    <string name="floating_action_button">Floating Action Button</string>
</resources>