<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10dp"
    android:layout_marginBottom="10dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="10dp"
    app:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="15dp"
        android:baselineAligned="false">

        <!-- Texts -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:orientation="vertical"
            android:layout_marginStart="10dp">

            <!-- Title -->
            <TextView
                android:id="@+id/tv_jenisSampah"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/greenDeep"
                android:text="@string/jenis_sampah"
                android:fontFamily="@font/poppins_medium"/>

            <!-- Subtitle -->
            <TextView
                android:id="@+id/tv_hargaSampah"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/greenDeep"
                android:text="@string/harga_sampah"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:orientation="vertical"
            android:layout_marginStart="10dp">

            <TextView
                android:id="@+id/tv_contohJenisSampah"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/greenDeep"
                android:text="@string/logam"
                android:fontFamily="@font/poppins"/>

            <!-- Subtitle -->
            <TextView
                android:id="@+id/tv_contohHargaSampah"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="14sp"
                android:fontFamily="@font/poppins"
                android:textColor="@color/greenDeep"
                android:text="@string/harga_perkg"/>

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>