<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.UpdateSettingHargaActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" >

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/greenDark"
            android:padding="10dp"
            android:minHeight="?attr/actionBarSize">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_arrow_back_24"
                app:tint="@color/white"
                android:contentDescription="@string/tambah_setting_harga" />

            <TextView
                android:id="@+id/title_appbar_transaction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_setting_harga"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_gravity="center" />

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <!--  Start of Layout Jenis Sampah  -->
    <LinearLayout
        android:id="@+id/layout_jenisSampah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tv_jenisSampah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jenis_sampah"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/greenDeep"
            android:textSize="14sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/jenisSampahEditTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_jenisSampah"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/hint_jenis_sampah"
                android:textColorHint="@color/greenMedium"
                android:minHeight="50dp"
                android:paddingHorizontal="10dp"
                android:background="@drawable/bg_textfield_outlined"
                android:layout_width="match_parent"
                android:textColor="@color/greenDeep"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:textSize="14sp"
                android:ems="10"
                android:inputType="text"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
    <!--  End of Layout Jenis Sampah  -->


    <!--  Start of Layout Jenis Sampah  -->
    <LinearLayout
        android:id="@+id/layout_hargaSampah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_jenisSampah"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tv_hargaSampah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/harga_sampah"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/greenDeep"
            android:textSize="14sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/hargaSampahEditTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_hargaSampah"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/hint_harga_sampah"
                android:textColorHint="@color/greenMedium"
                android:minHeight="50dp"
                android:paddingHorizontal="10dp"
                android:background="@drawable/bg_textfield_outlined"
                android:layout_width="match_parent"
                android:textColor="@color/greenDeep"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:textSize="14sp"
                android:ems="10"
                android:inputType="text"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
    <!--  End of Layout Jenis Sampah  -->

    <!--  Start of Button simpan  -->
    <Button
        android:id="@+id/btn_simpan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_textfield_outlined"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"
        android:backgroundTint="@color/greenDark"
        android:text="@string/simpan"
        android:paddingHorizontal="20dp"
        android:textColor="@color/white"
        android:minHeight="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_hargaSampah" />
    <!--  End of Button Simmpan  -->

</androidx.constraintlayout.widget.ConstraintLayout>